# Project_2_Group_27

./: .gitignore  92  CMakeLists.txt  main.c
Project_2_Group_27-93a79d3a68b31425a9e65f6668a934f6b8765e08/: CMakeLists.txt  README.md  main.c
card/: card.c  card.h
controller/: controller.c  controller.h
model/: card.c  card.h  model.c  model.h
project_mainOnly/: main.c
view/: view.c  view.h
